port 4205, Batl-Hex, makeRect,

--- a/angular.json
+++ b/angular.json
@@ -63,7 +63,7 @@
               "browserTarget": "battleland:build:production"
             },
             "development": {
-              "browserTarget": "battleland:build:development"
+              "browserTarget": "battleland:build:development", "port": 4205
             }
           },
           "defaultConfiguration": "development"
