--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "battleland",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -23,7 +23,7 @@
     "@thegraid/common-lib": "^1.3.28",
     "@thegraid/easeljs-lib": "^1.3.8",
     "@thegraid/easeljs-module": "^1.2.0",
-    "@thegraid/hexlib": "file:../../ts/hexlib/thegraid-hexlib-1.0.10.tgz",
+    "@thegraid/hexlib": "^1.0.10",
     "@thegraid/wspbclient": "^1.4.26",
     "file-loader": "^6.2.0",
     "json5": "^2.2.3",
